--- a/src/app/checkStyle.scss
+++ b/src/app/checkStyle.scss
@@ -5,6 +5,8 @@
     padding-top: 70px;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
  
     .check-block {
         width: 90%;
@@ -60,6 +62,7 @@
                 text-align: center;
                 font-family: "Nunito", sans-serif;
                 font-weight: 900;
+                font-size: 20px;
             }
             img {
                 margin-top: 17px;
@@ -80,6 +83,7 @@
                 font-family: "Nunito", sans-serif;
                 font-weight: 900;
                 color: rgb(83, 83, 83); 
+        
             }
         }
 
@@ -103,7 +107,7 @@
                     font-family: "Nunito", sans-serif;
                     font-weight: 500;
                     color: rgb(75, 74, 74); 
-                    font-size: 13px;
+                    font-size: 15px;
                  }
             }
         }
@@ -115,6 +119,34 @@
                 color: rgb(75, 74, 74); 
                 font-size: 13px;
             }
+        }
+    }
+}
+
+.iconBlock {
+    display: flex;
+    justify-content: space-between;
+
+    .under-block {
+        display: flex; 
+        flex-direction: column;
+        align-items: center;
+        margin: 0 20px;
+
+
+        .icon {
+            margin-top: 20px;
+            color: white;
+            background-color: rgb(0, 110, 0);
+            padding: 5px;
+            border-radius: 50%;
+            font-size: 40px;
+        }
+
+        p {
+            color: white;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-weight: 300;
         }
     }
 }
