--- a/src/app/checkStyle.scss
+++ b/src/app/checkStyle.scss
@@ -50,6 +50,7 @@
                 font-family: "Nunito", sans-serif;
                 font-weight: 900;
                 color: rgb(0, 110, 0);
+                font-size: 20px;
             }
 
         }
